--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </td>
     </tr>
   </table>
-  <hr size="3">
+  <hr size="3" style="margin:0;">
   <h3>Education</h3>
   <table cellspacing="10">
     <thead bgcolor="pink">
@@ -59,7 +59,7 @@
       </tr>
     </tbody>
   </table>
-  <hr size="3">
+  <hr size="3" style="margin:0;">
   <h3>Expertising in Fields of</h3>
   <ul hspace="10">
     <li>Angelic Healing</li>
@@ -73,7 +73,7 @@
     <li>Nutrition & Diet</li>
     <li>Effective Life Management & Counselling</li>
   </ul>
-  <hr size="3">
+  <hr size="3" style="margin:0;">
   <h3>Achievements</h3>
   <table cellspacing="10">
     <tr>
@@ -98,13 +98,13 @@
       <td></td>
     </tr>
   </table>
-  <hr size="3">
+  <hr size="3" style="margin:0;">
   <h3>Get in Touch</h3>
   <ul>
     <li><a href="https://www.instagram.com/am_lalith_kumar/">Instagram</a></li>
     <li><a href="send message.html">Message</a></li>
   </ul>
-  <hr size="3">
+  <hr size="3" style="margin:0;">
 </body>
 
 </html>
