--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Lalith Kumar | Home</title>
 </head>
 
-<body link="darkolivegreen" vlink="crimson" alink="orange" style="margin:0;">
+<body link="darkolivegreen" vlink="crimson" alink="orange" style="margin:0;padding:0"">
   <h1>
     <font color="red">Lalith Kumar</font>
   </h1>
