--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
     <li><a href="send message.html">Message</a></li>
   </ul>
   <hr size="3" style="margin:0;">
+  <h3><font color="blue"><em>Let's Redefine Life Together...<em><font color><h3>
+  <hr size="3" style="margin:0;">
 </body>
 
 </html>
