--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
     <li><a href="send message.html">Message</a></li>
   </ul>
   <hr size="3" style="margin:0;">
-  <h3><font color="blue"><em>Let's Redefine Life Together...<em><font color><h3>
+  <h3 hspace="30"><font color="blue"><em>The Question is,
+    Who You Are? & Who Do You Want To Be?
+    You are never too late to change your Life,
+    Come Join Me, Let's Redefine Life Together...<em><font color><h3>
   <hr size="3" style="margin:0;">
 </body>
 
