--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
     <li><a href="send message.html">Message</a></li>
   </ul>
   <hr size="3" style="margin:0;">
-  <h3 hspace="30"><font color="blue"><em>The Question is,
-    Who You Are? & Who Do You Want To Be?
-    You are never too late to change your Life,
+  <h3><font color="blue"><em>The Question is,<br>
+    Who You Are? & Who Do You Want To Be?<br>
+    You are never too late to change your Life,<br>
     Come Join Me, Let's Redefine Life Together...<em><font color><h3>
   <hr size="3" style="margin:0;">
 </body>
