--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <td><img src="lalith_personal_site_dp.png" alt="Lalith Kumar's Profile Picture" width="200" height="200"></td>
       <td>
         <p>
-          Myself Lalith Kumar. They say,<em><strong>From the Deepest Pains comes the Highest Purpose</strong></em>.
+          I'm Lalith Kumar. They say,<em><strong>From the Deepest Pains comes the Highest Purpose</strong></em>.
           Several years ago,I was almost nothing,I was just an <em>Innocent Featherhead Speech Impaired Fatso</em>.
           I used to be Bullied,Beaten,Ridiculed,Oppressed and taken advantage of. <strong><em>And,One day somebody very dear to me,left me</strong></em>.
           That,hit me hard and I was deeply moved. Everyday the trauma kept on growing and somewhere there,I realised that I was almost in the mouth of a Psychological Depression.
