--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Lalith Kumar | Home</title>
+  <style>
+    hr{
+      width:auto;
+      margin-left:0;
+      margin-right:0;
+    }
+  </style>
 </head>
 
 <body link="darkolivegreen" vlink="crimson" alink="orange" style="margin:0;padding:0"">
