--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </ul>
   <hr size="3" style="margin:0;">
   <h3>Achievements</h3>
-  <table cellspacing="10">
+  <table cellspacing="10" style="border-spacing:30px 0;>
     <tr>
       <td></td>
       <td></td>
