--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <title>Lalith Kumar | Home</title>
   <style>
     hr{
-      width:auto;
-      margin-left:0;
-      margin-right:0;
+      width:100%;
+      margin:0;
     }
   </style>
 </head>
